--- a/StudioConcept/packages.config
+++ b/StudioConcept/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="gong-wpf-dragdrop" version="2.0.4" targetFramework="net472" />
   <package id="JetBrains.Annotations" version="2019.1.3" targetFramework="net472" />
 </packages>
