--- a/StudioConcept/packages.config
+++ b/StudioConcept/packages.config
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommonServiceLocator" version="2.0.2" targetFramework="net472" />
+  <package id="CommonServiceLocator" version="2.0.4" targetFramework="net472" />
   <package id="DeepCloner" version="0.10.2" targetFramework="net472" />
   <package id="gong-wpf-dragdrop" version="2.0.4" targetFramework="net472" />
   <package id="JetBrains.Annotations" version="2019.1.3" targetFramework="net472" />
   <package id="MvvmLight" version="5.4.1.1" targetFramework="net472" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
   <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net472" />
+  <package id="Unity" version="5.11.1" targetFramework="net472" />
 </packages>
